force-app/main/default/objects/Lead/fields/Request_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Request_Additional_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Additional Information</label>
    <type>Checkbox</type>
</CustomField>