force-app/main/default/objects/Lead/fields/Request_Additional_Information_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Additional_Information_Date__c</fullName>
    <label>Request Additional Information Date</label>
    <type>DateTime</type>
</CustomField>