force-app/main/default/objects/Lead/fields/Sailor_s_Command_or_Ship_Email__c.field-meta.xml
<CustomField>
    <fullName>Sailor_s_Command_or_Ship_Email__c</fullName>
    <label>Sailor&apos;s Command or Ship Email</label>
    <type>Email</type>
</CustomField>