force-app/main/default/objects/Lead/fields/Sailor_s_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Sailor_s_Full_Name__c</fullName>
    <label>Sailor&apos;s Full Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>