force-app/main/default/objects/Lead/recordTypes/Family_Member.recordType-meta.xml
<RecordType>
    <fullName>Family_Member</fullName>
    <active>true</active>
    <businessProcess>Family Member</businessProcess>
    <description>Select when referring to a Household or family member</description>
    <label>Family Member</label>
</RecordType>